more reliable with a single lb
It will be more reliable bringing openvpn server up if it does not
provision two load balancers at the same time, so that the NAT rule can
be consistently addressed each time the cluster is started.

--- a/apps/openvpn-as/kingdonb-helm-charts-1-gitrepo.yaml
+++ b/apps/openvpn-as/kingdonb-helm-charts-1-gitrepo.yaml
@@ -7,5 +7,5 @@ metadata:
 spec:
   interval: 10m0s
   ref:
-    branch: openvpn-persistence-existing
+    branch: helm-single-lb-only
   url: https://github.com/kingdonb/helm-charts-1
