--- a/apps/openvpn-as/helmrelease.yaml
+++ b/apps/openvpn-as/helmrelease.yaml
@@ -17,7 +17,7 @@ spec:
   chart:
     spec:
       chart: ./charts/openvpn-as
-      version: '^0.2.0'
+      version: '^0.3.0-0'
       sourceRef:
         kind: GitRepository
         name: kingdonb-helm-charts-1
