--- a/clusters/moo-cluster/podinfo/flux-kustomization.yaml
+++ b/clusters/moo-cluster/podinfo/flux-kustomization.yaml
@@ -4,7 +4,7 @@ metadata:
   name: podinfo
   namespace: flux-system
 spec:
-  interval: 10m0s
+  interval: 47h59m28s
   suspend: true
   path: ./apps/podinfo
   prune: true
