--- a/infrastructure/ingress-nginx/internal-helmrelease.yaml
+++ b/infrastructure/ingress-nginx/internal-helmrelease.yaml
@@ -4,7 +4,7 @@ metadata:
   name: internal-ingress
   namespace: ingress-nginx
 spec:
-  interval: 45m
+  interval: 36h45m10s
   releaseName: ingress-internal
   chart:
     spec:
