--- a/infrastructure/kube-oidc-proxy/helmrelease.yaml
+++ b/infrastructure/kube-oidc-proxy/helmrelease.yaml
@@ -4,7 +4,7 @@ metadata:
   name: kube-oidc-proxy
   namespace: flux-system
 spec:
-  interval: 45m
+  interval: 36h45m10s
   releaseName: kube-oidc-proxy
   targetNamespace: kube-oidc-proxy
   storageNamespace: kube-oidc-proxy
