--- a/clusters/moo-cluster/keycloak/infrastructure.yaml
+++ b/clusters/moo-cluster/keycloak/infrastructure.yaml
@@ -4,7 +4,7 @@ metadata:
   name: keycloak
   namespace: flux-system
 spec:
-  interval: 10m
+  interval: 11h56m11s
   sourceRef:
     kind: GitRepository
     name: flux-system
