--- a/clusters/moo-cluster/kube-oidc-proxy/infrastructure.yaml
+++ b/clusters/moo-cluster/kube-oidc-proxy/infrastructure.yaml
@@ -4,7 +4,7 @@ metadata:
   name: kube-oidc-proxy
   namespace: flux-system
 spec:
-  interval: 10m
+  interval: 11h54m31s
   sourceRef:
     kind: GitRepository
     name: flux-system
