--- a/clusters/moo-cluster/local-path-provisioner/infrastructure.yaml
+++ b/clusters/moo-cluster/local-path-provisioner/infrastructure.yaml
@@ -4,7 +4,7 @@ metadata:
   name: persistence
   namespace: flux-system
 spec:
-  interval: 10m
+  interval: 11h14m21s
   suspend: false
   sourceRef:
     kind: GitRepository
