--- a/infrastructure/kube-oidc-proxy/cluster-role-binding.yaml
+++ b/infrastructure/kube-oidc-proxy/cluster-role-binding.yaml
@@ -9,3 +9,5 @@ roleRef:
 subjects:
 - kind: User
   name: 1be50ca1-c777-4295-841e-8d5841a70c10
+- kind: User
+  name: 18533dbd-0526-466c-b5ea-c8bb6725a18d
