--- a/clusters/moo-cluster/flux-system/on-call-webapp-alert.yaml
+++ b/clusters/moo-cluster/flux-system/on-call-webapp-alert.yaml
@@ -9,8 +9,8 @@ spec:
   eventSeverity: info
   summary: moo-cluster
   eventSources:
-    - kind: GitRepository
-      name: '*'
+    # - kind: GitRepository
+    #   name: '*'
     - kind: Kustomization
       name: '*'
     - kind: HelmRelease
@@ -19,9 +19,9 @@ spec:
       name: '*'
     - kind: HelmRepository
       name: '*'
-    - kind: ImageUpdateAutomation
-      name: '*'
-    - kind: ImagePolicy
-      name: '*'
+    # - kind: ImageUpdateAutomation
+    #   name: '*'
+    # - kind: ImagePolicy
+    #   name: '*'
     - kind: ImageRepository
       name: '*'
