we will not use flux for decryption until later
my-secrets has the decryption provider enabled, we do not need it for
flux-system

--- a/clusters/moo-cluster/flux-system/kustomization.yaml
+++ b/clusters/moo-cluster/flux-system/kustomization.yaml
@@ -10,4 +10,4 @@ resources:
 - image-webhook-receiver.yaml
 - on-call-webapp-alert.yaml
 patchesStrategicMerge:
-- gotk-patches.yaml
+# - gotk-patches.yaml
