add argocd once again
with a manual sync policy, it will be harmless (unless someone were to
touch the button at least)

--- a/clusters/moo-cluster/argocd/flux-kustomization.yaml
+++ b/clusters/moo-cluster/argocd/flux-kustomization.yaml
@@ -11,10 +11,8 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-  # dependsOn:
-  #   - name: ingress-nginx
-  #   - name: persistence
-  #   - name: my-secrets
+  dependsOn:
+    - name: my-secrets
   healthChecks:
     - apiVersion: apps/v1
       kind: Deployment
