--- a/clusters/moo-cluster/metrics-server/infrastructure.yaml
+++ b/clusters/moo-cluster/metrics-server/infrastructure.yaml
@@ -1,18 +1,18 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
-  name: local-path-provisioner
+  name: metrics-server
   namespace: flux-system
 spec:
   interval: 11h59m11s
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./infrastructure/local-path-provisioner
+  path: ./infrastructure/metrics-server
   prune: true
   validation: client
   healthChecks:
     - apiVersion: apps/v1
       kind: Deployment
-      name: local-path-provisioner
-      namespace: local-path-storage
+      name: metrics-server
+      namespace: kube-system
