--- a/infrastructure/local-path-provisioner/infrastructure.yaml
+++ b/infrastructure/local-path-provisioner/infrastructure.yaml
@@ -1,16 +1,18 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
-  name: local-path-provisioner
+  name: persistence
   namespace: flux-system
 spec:
-  interval: 11h59m11s
+  interval: 11h14m21s
+  suspend: false
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./infrastructure/local-path-provisioner
-  prune: true
+  path: ./persistence
+  prune: false
   validation: client
+  timeout: 5m0s
   healthChecks:
     - apiVersion: apps/v1
       kind: Deployment
