--- a/clusters/moo-cluster/kustomization.yaml
+++ b/clusters/moo-cluster/kustomization.yaml
@@ -2,10 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - argocd
-- cert-manager/infrastructure.yaml
+- cert-manager
 - flux-system
-- gitea/flux-kustomization.yaml
-- gitea/namespace.yaml
+- gitea
 - ingress-nginx/infrastructure.yaml
 - jenkins/flux-kustomization.yaml
 - jenkins/namespace.yaml
