finish cleaning up in flux-system
This isn't really necessary if we only use Flux, but since some Argo
will be used, we can't depend on automated recursive kustomize create

--- a/clusters/moo-cluster/kustomization.yaml
+++ b/clusters/moo-cluster/kustomization.yaml
@@ -10,9 +10,8 @@ resources:
 - keycloak
 - kube-oidc-proxy
 - local-path-provisioner
-- metallb/infrastructure.yaml
+- metallb
 - metrics-server
 - my-secrets
-- openvpn-as/flux-kustomization.yaml
-- openvpn-as/namespace.yaml
-- podinfo/flux-kustomization.yaml
+- openvpn-as
+- podinfo
