--- a/clusters/moo-cluster/my-secrets/infrastructure.yaml
+++ b/clusters/moo-cluster/my-secrets/infrastructure.yaml
@@ -5,6 +5,7 @@ metadata:
   name: my-secrets
   namespace: flux-system
 spec:
+  suspend: true
  #dependsOn:
  #  - name: flux-system
   decryption:
