--- a/apps/argocd/cert-manager-issuers.yaml
+++ b/apps/argocd/cert-manager-issuers.yaml
@@ -1,12 +1,12 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cert-manager-app
+  name: cert-manager-issuers
 spec:
   project: default
   source:
     repoURL: 'https://github.com/kingdon-ci/jenkins-infra'
-    path: infrastructure/cert-manager
+    path: infrastructure/cert-manager-issuers
     targetRevision: main
   destination:
     server: 'https://kubernetes.default.svc'
