--- a/apps/argocd/metallb-app.yaml
+++ b/apps/argocd/metallb-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: metallb
+  name: metallb-app
 spec:
   project: default
   source:
