--- a/apps/argocd/metallb-instances.yaml
+++ b/apps/argocd/metallb-instances.yaml
@@ -1,13 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cert-manager-app
+  name: metallb-instances
 spec:
   project: default
   source:
     repoURL: 'https://github.com/kingdon-ci/jenkins-infra'
-    path: infrastructure/cert-manager
+    path: infrastructure/metallb-instances
     targetRevision: main
   destination:
     server: 'https://kubernetes.default.svc'
-    namespace: cert-manager
+    namespace: metallb-system
