more app things

--- a/apps/argocd/ingress-app.yaml
+++ b/apps/argocd/ingress-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: ingress
+  name: ingress-app
 spec:
   project: default
   source:
