--- a/apps/argocd/jenkins-app.yaml
+++ b/apps/argocd/jenkins-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: jenkins
+  name: jenkins-app
 spec:
   project: default
   source:
