--- a/apps/argocd/metrics-server-app.yaml
+++ b/apps/argocd/metrics-server-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: metrics-server
+  name: metrics-server-app
 spec:
   project: default
   source:
