--- a/apps/argocd/gitea-app.yaml
+++ b/apps/argocd/gitea-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: gitea
+  name: gitea-app
 spec:
   project: default
   source:
