--- a/apps/argocd/kube-oidc-proxy-app.yaml
+++ b/apps/argocd/kube-oidc-proxy-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: kube-oidc-proxy
+  name: kube-oidc-proxy-app
 spec:
   project: default
   source:
