--- a/apps/argocd/podinfo-app.yaml
+++ b/apps/argocd/podinfo-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: podinfo
+  name: podinfo-app
 spec:
   project: default
   source:
