--- a/apps/openvpn-as/helmrelease.yaml
+++ b/apps/openvpn-as/helmrelease.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 36h45m10s
-  timeout: 8m
+  timeout: 8m0s
   releaseName: openvpn
   targetNamespace: openvpn
   storageNamespace: openvpn
