it's cert-manager!

--- a/apps/argocd/cert-manager-app.yaml
+++ b/apps/argocd/cert-manager-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cert-manager-app
+  name: cert-manager
 spec:
   project: default
   source:
