--- a/clusters/moo-cluster/kube-oidc-proxy/infrastructure.yaml
+++ b/clusters/moo-cluster/kube-oidc-proxy/infrastructure.yaml
@@ -12,7 +12,7 @@ spec:
   dependsOn:
     - name: ingress-nginx
     - name: my-secrets
-  prune: true
+  prune: false
   validation: client
   healthChecks:
     - apiVersion: apps/v1
