--- a/clusters/moo-cluster/cert-manager/infrastructure.yaml
+++ b/clusters/moo-cluster/cert-manager/infrastructure.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   interval: 11h59m11s
   path: ./infrastructure/cert-manager
-  prune: true
+  prune: false
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -37,7 +37,7 @@ spec:
     - name: ingress-nginx
   interval: 11h3m40s
   path: ./infrastructure/cert-manager-issuers
-  prune: true
+  prune: false
   sourceRef:
     kind: GitRepository
     name: flux-system
