--- a/persistence/gitea-0-pvc.yaml
+++ b/persistence/gitea-0-pvc.yaml
@@ -1,19 +1,19 @@
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  annotations:
-    volume.beta.kubernetes.io/storage-provisioner: rancher.io/local-path
-    volume.kubernetes.io/selected-node: moo
-  labels:
-    app.kubernetes.io/instance: gitea
-    app.kubernetes.io/name: gitea
-  name: data-gitea-0
-  namespace: gitea
-spec:
-  accessModes:
-  - ReadWriteOnce
-  resources:
-    requests:
-      storage: 10Gi
-  storageClassName: local-path
-  volumeName: pvc-c8274d85-6ec1-41eb-95bc-72f54e02816d
+#apiVersion: v1
+#kind: PersistentVolumeClaim
+#metadata:
+#  annotations:
+#    volume.beta.kubernetes.io/storage-provisioner: rancher.io/local-path
+#    volume.kubernetes.io/selected-node: moo
+#  labels:
+#    app.kubernetes.io/instance: gitea
+#    app.kubernetes.io/name: gitea
+#  name: data-gitea-0
+#  namespace: gitea
+#spec:
+#  accessModes:
+#  - ReadWriteOnce
+#  resources:
+#    requests:
+#      storage: 10Gi
+#  storageClassName: local-path
+#  volumeName: pvc-c8274d85-6ec1-41eb-95bc-72f54e02816d
