do not install jenkins or openvpn up-front
They can be part of the demonstration

--- a/clusters/moo-cluster/kustomization.yaml
+++ b/clusters/moo-cluster/kustomization.yaml
@@ -4,12 +4,12 @@ resources:
 - cert-manager
 - flux-system
 - ingress-nginx
-- jenkins
+#- jenkins
 - keycloak
 - kube-oidc-proxy
 - local-path-provisioner
 - metallb
 - metrics-server
 - my-secrets
-- openvpn-as
+#- openvpn-as
 - podinfo
