--- a/clusters/moo-cluster/flux-system/kustomization.yaml
+++ b/clusters/moo-cluster/flux-system/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-# - gotk-components.yaml
+- gotk-components.yaml
 - gotk-sync.yaml
 # - cert-manager-sync.yaml
 - slack-notification.yaml
