--- a/clusters/moo-cluster/my-secrets/infrastructure.yaml
+++ b/clusters/moo-cluster/my-secrets/infrastructure.yaml
@@ -5,7 +5,7 @@ metadata:
   name: my-secrets
   namespace: flux-system
 spec:
-  suspend: true
+  suspend: false
   decryption:
     provider: sops
     secretRef:
