--- a/clusters/moo-cluster/linkerd/flux-kustomization.yaml
+++ b/clusters/moo-cluster/linkerd/flux-kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
-  name: linkerd
+  name: linkerd-infra
   namespace: flux-system
 spec:
   interval: 47h59m28s
