--- a/clusters/moo-cluster/kustomization.yaml
+++ b/clusters/moo-cluster/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
 - cert-manager
 - flux-system
 - ingress-nginx
-#- jenkins
+- jenkins
 - keycloak
 - kube-oidc-proxy
 - linkerd
@@ -12,5 +12,5 @@ resources:
 - metallb
 - metrics-server
 - my-secrets
-#- openvpn-as
+- openvpn-as
 - podinfo
