--- a/clusters/moo-cluster/kustomization.yaml
+++ b/clusters/moo-cluster/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - cert-manager
+- deis
 - flux-system
 - flux-system-extras
 - ingress-nginx
