--- a/clusters/moo-cluster/deis/flux-kustomization.yaml
+++ b/clusters/moo-cluster/deis/flux-kustomization.yaml
@@ -14,6 +14,6 @@ spec:
   healthChecks:
     - apiVersion: apps/v1
       kind: Deployment
-      name: hephy-controller
+      name: deis-controller
       namespace: deis
   timeout: 3m0s
