--- a/infrastructure/keycloak/kustomization.yaml
+++ b/infrastructure/keycloak/kustomization.yaml
@@ -35,3 +35,10 @@ patchesStrategicMerge:
          #  value: "admin"
           - name: PROXY_ADDRESS_FORWARDING
             value: "true"
+          resources:
+            requests:
+              memory: 512Mi
+              cpu: 250m
+            limits:
+              memory: 768Mi
+              cpu: 500m
