make explicit semver upgrade readiness declaration

--- a/apps/flux-legacy/okteto-flux-helmrelease.yaml
+++ b/apps/flux-legacy/okteto-flux-helmrelease.yaml
@@ -15,6 +15,7 @@ spec:
   releaseName: flux
   chart:
     spec:
+      version: ^1.11.1
       chart: flux
       sourceRef:
         kind: HelmRepository
