--- a/clusters/moo-cluster/flux-system/gotk-sync.yaml
+++ b/clusters/moo-cluster/flux-system/gotk-sync.yaml
@@ -18,7 +18,7 @@ metadata:
 spec:
   interval: 30m0s
   path: ./clusters/moo-cluster
-  prune: false
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
