Flux protip: wherever egregious intervals are used
also include retryInterval

We want our Flux kustomizations to not swamp the server and don't emit a
bunch of noise, since they don't need to poll as there are webhooks
everywhere, we can increase interval to avoid unnecessary reconciling
whenever there isn't a change.

But when something failed to reconcile, we don't want to wait 11 hours
or for the next webhook to induce Flux to try again; sometimes the
condition resolves itself, and we can use the spec.retryInterval setting
to ensure Flux tries again without waiting as long as spec.interval

--- a/clusters/moo-cluster/cert-manager/infrastructure.yaml
+++ b/clusters/moo-cluster/cert-manager/infrastructure.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 11h59m11s
+  retryInterval: 10m
   path: ./infrastructure/cert-manager
   prune: false
   sourceRef:
@@ -35,6 +36,7 @@ spec:
     - name: cert-manager
     - name: ingress-nginx
   interval: 11h3m40s
+  retryInterval: 10m
   path: ./infrastructure/cert-manager-issuers
   prune: false
   sourceRef:
