--- a/clusters/moo-cluster/my-secrets/infrastructure.yaml
+++ b/clusters/moo-cluster/my-secrets/infrastructure.yaml
@@ -11,6 +11,7 @@ spec:
     secretRef:
       name: sops-gpg
   interval: 30m0s
+  retryInterval: 10m
   path: ./secrets/moo-cluster
   prune: true
   sourceRef:
