--- a/clusters/moo-cluster/linkerd/flux-kustomization.yaml
+++ b/clusters/moo-cluster/linkerd/flux-kustomization.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 47h59m28s
+  retryInterval: 10m
   suspend: false
   path: ./infrastructure/linkerd
   prune: true
