whoops there is no LoadBalancer kind

--- a/apps/hephy/helmrelease-deis-hephy.yaml
+++ b/apps/hephy/helmrelease-deis-hephy.yaml
@@ -21,7 +21,7 @@ spec:
   postRenderers:
     - kustomize:
         patchesStrategicMerge:
-          - kind: LoadBalancer
+          - kind: Service
             apiVersion: v1
             metadata:
               name: deis-builder
