--- a/clusters/moo-cluster/flux-system/gotk-sync.yaml
+++ b/clusters/moo-cluster/flux-system/gotk-sync.yaml
@@ -10,7 +10,7 @@ spec:
     branch: main
   secretRef:
     name: flux-system
-  url: ssh://git@github.com/kingdon-ci/jenkins-infra
+  url: https://github.com/kingdon-ci/jenkins-infra
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
