add namespace to match exactly

--- a/apps/jenkins/helmrelease.yaml
+++ b/apps/jenkins/helmrelease.yaml
@@ -25,6 +25,7 @@ spec:
           apiVersion: apps/v1
           metadata:
             name: jenkins
+            namespace: jenkins
           spec:
             replicas: 0
   values:
