Revert "do not specify validation"
This reverts commit b6f45b7ae5df561bc93ab8af30e671188c28a3bd.

--- a/clusters/moo-cluster/cert-manager/infrastructure.yaml
+++ b/clusters/moo-cluster/cert-manager/infrastructure.yaml
@@ -12,6 +12,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+  validation: client
   healthChecks:
     - apiVersion: apps/v1
       kind: Deployment
@@ -42,6 +43,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+  validation: client
   healthChecks:
     - apiVersion: cert-manager.io/v1
       kind: ClusterIssuer
