--- a/clusters/moo-cluster/flux-system-extras/infrastructure.yaml
+++ b/clusters/moo-cluster/flux-system-extras/infrastructure.yaml
@@ -14,6 +14,7 @@ spec:
     - name: ingress-nginx
     - name: my-secrets
   prune: false
+  validation: client
   healthChecks:
     - apiVersion: networking.k8s.io/v1
       kind: Ingress
