--- a/clusters/moo-cluster/ingress-nginx/infrastructure.yaml
+++ b/clusters/moo-cluster/ingress-nginx/infrastructure.yaml
@@ -14,6 +14,7 @@ spec:
     - name: metallb
     - name: metallb-instance
   prune: false
+  validation: client
   healthChecks:
     - apiVersion: apps/v1
       kind: Deployment
