--- a/clusters/moo-cluster/kube-oidc-proxy/infrastructure.yaml
+++ b/clusters/moo-cluster/kube-oidc-proxy/infrastructure.yaml
@@ -14,6 +14,7 @@ spec:
     - name: ingress-nginx
     - name: my-secrets
   prune: false
+  validation: client
   healthChecks:
     - apiVersion: apps/v1
       kind: Deployment
