--- a/clusters/moo-cluster/metrics-server/infrastructure.yaml
+++ b/clusters/moo-cluster/metrics-server/infrastructure.yaml
@@ -11,6 +11,7 @@ spec:
     name: flux-system
   path: ./infrastructure/metrics-server
   prune: false
+  validation: client
   healthChecks:
     - apiVersion: apps/v1
       kind: Deployment
