--- a/clusters/moo-cluster/flux-system/gotk-sync.yaml
+++ b/clusters/moo-cluster/flux-system/gotk-sync.yaml
@@ -10,7 +10,7 @@ spec:
     branch: main
   url: https://github.com/kingdon-ci/jenkins-infra
 ---
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
   name: flux-system
@@ -22,3 +22,4 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+  validation: client
