add the global health check "wait: true"

--- a/clusters/moo-cluster/flux-system/gotk-sync.yaml
+++ b/clusters/moo-cluster/flux-system/gotk-sync.yaml
@@ -21,6 +21,7 @@ spec:
   interval: 10m0s
   path: ./clusters/moo-cluster
   prune: true
+  wait: true
   sourceRef:
     kind: GitRepository
     name: flux-system
