--- a/clusters/moo-cluster/keycloak/infrastructure.yaml
+++ b/clusters/moo-cluster/keycloak/infrastructure.yaml
@@ -1,4 +1,4 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: keycloak
@@ -14,10 +14,11 @@ spec:
     - name: my-secrets
     - name: ingress-nginx
   prune: false
+  wait: true
   validation: client
   healthChecks:
     - apiVersion: apps/v1
       kind: Deployment
       name: keycloak
       namespace: keycloak
-  timeout: 2m0s
+  timeout: 4m0s
