--- a/clusters/moo-cluster/gitea/flux-kustomization.yaml
+++ b/clusters/moo-cluster/gitea/flux-kustomization.yaml
@@ -4,7 +4,7 @@ metadata:
   name: gitea
   namespace: flux-system
 spec:
-  interval: 47h59m28s
+  interval: 10m
   retryInterval: 10m
   suspend: false
   path: ./apps/gitea
