--- a/clusters/moo-cluster/jenkins/flux-kustomization.yaml
+++ b/clusters/moo-cluster/jenkins/flux-kustomization.yaml
@@ -4,7 +4,7 @@ metadata:
   name: jenkins
   namespace: flux-system
 spec:
-  interval: 47h59m28s
+  interval: 10m
   retryInterval: 10m
  #suspend: true
   path: ./apps/jenkins
