--- a/clusters/moo-cluster/flux-system/kustomization.yaml
+++ b/clusters/moo-cluster/flux-system/kustomization.yaml
@@ -8,4 +8,4 @@ patchesStrategicMerge:
 images:
 - name: ghcr.io/fluxcd/kustomize-controller
   newName: stefanprodan/kustomize-controller
-  newTag: fixes-v1beta2
+  newTag: fixes2-v1beta2
