patches are stringly
also, move "my-secrets" to a separate branch, so syncs that depend on
secrets can be 30s faster (hopefully)

--- a/clusters/moo-cluster/jenkins/flux-kustomization.yaml
+++ b/clusters/moo-cluster/jenkins/flux-kustomization.yaml
@@ -25,7 +25,8 @@ spec:
   validation: client
   wait: true
   patches:
-    - apiVersion: helm.toolkit.fluxcd.io/v2beta1
+    - |-
+      apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
       metadata:
         name: jenkinsci
