patchesStrategicMerge are different in patches
you have to specify a target for each patch (it can include wildcards!)

--- a/clusters/moo-cluster/jenkins/flux-kustomization.yaml
+++ b/clusters/moo-cluster/jenkins/flux-kustomization.yaml
@@ -25,12 +25,12 @@ spec:
   validation: client
   wait: true
   patches:
-    - patch: |-
-        apiVersion: helm.toolkit.fluxcd.io/v2beta1
+    - target:
         kind: HelmRelease
         metadata:
           name: jenkinsci
           namespace: flux-system
+      patch: |-
         spec:
           postRenderers:
           - kustomize:
