--- a/clusters/moo-cluster/jenkins/flux-kustomization.yaml
+++ b/clusters/moo-cluster/jenkins/flux-kustomization.yaml
@@ -30,6 +30,10 @@ spec:
         name: jenkinsci
         namespace: flux-system
       patch: |-
+        apiVersion: helm.toolkit.fluxcd.io/v2beta1
+        kind: HelmRelease
+        metadata:
+          name: jenkinsci
         spec:
           postRenderers:
           - kustomize:
